[package]
name = "hook"
version = "0.1.0"
authors = ["Kevin Darlington <kevin@outroot.com>"]

[lib]
name = "wininject"
path = "src/lib.rs"

[[bin]]
name = "wininject"
path = "src/bin.rs"

[dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
# sharedlib = "3.1"
# libc = "0.2"
pe = "0.1.1"
scopeguard = "0.2"
